<resources>
    <string name="app_name">Workout</string>
    <string name="создание_тренировки">Создание тренировки</string>
    <string name="название_тренировки">Название тренировки</string>
    <string name="сохранить">Сохранить</string>
    <string name="редактирование_тренировки">Редактирование тренировки</string>
    <string name="подходы">Подходы</string>
    <string name="подходы_в_упражнении">Подходы в упражнении</string>
    <string name="тренировки">Тренировки</string>
    <string name="вес_повторений_текст">Вес (кг) / Повторения (раз)</string>
    <string name="дистанция_время_текст">Дистанция(км)/ Время(мин)</string>
    <string name="редактирование_упражнения">Редактирование упражнения</string>
    <string name="название_упражнения">Название упражнения</string>
</resources>
